============
Five Changes
============

Bugfixes
--------

* Made the __call__ method of ViewMixinForAttributes have the same signature
  as the original attribute.  This aids some pathological request parameter
  marshalling.

Five 1.2.6 (2006-08-13)
=======================

* Allow multiple uses of the <class>/<content> directive.

* Fix problem with WebDAV/HEAD requests due to new traversal order.

* Backported the new traversal lookup order from Zope 2.10 (attribute,
  adapter, acquired attribute).

Five 1.2.5 (2006-05-29)
=======================

Bugfixes
--------

* Fixed an issue where <browser:page> based views that didn't have
  template or attribute defined weren't getting BrowserView mixed in.

* Fixed an issue where new-style classes could not be used for
  view components with <browser:page>.

Five 1.2.4 (2006-05-04)
=======================

Bugfixes
--------

* Made sure that events are fired as expected in add and edit forms.

* Made sure LocalizerLanguages class normalized language codes to
  xx-yy, instead of xx_YY or xx-YY.

* Fixed a problem with the new traversal look-up order and the root
  object (OFS.Application.Application).

Five 1.2.3 (2006-03-31)
=======================

Bugfixes
--------

* Added the ``class`` ZCML directive as an alias to ``content``.

Five 1.2.2 (2006-03-26)
=======================

Bugfixes
--------

* A local utility registered with an derived interface will now be available
  by the inherited interface as well, in the same way as Zope3.

* Fixed look-up order during Five traversal.  It is now as follows:

  1. If an object has __bobo_traverse__, use it.

  2. Otherwise do attribute look-up or, if that doesn't work, key item
     lookup.

  3. If neither __bobo_traverse__ nor attribute/key look-up work, it
     tries to find a Zope 3-style view.

Five 1.2.1 (2006-02-25)
=======================

Bugfixes
--------

* Five's traversing machinery now mimicks the ZPublisher correctly: